// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tooltip demo -- placement 1`] = `
.c2.uc-fe-popover {
  position: absolute;
  left: -9999px;
  top: -9999px;
  z-index: 100;
  display: block;
}

.c2.uc-fe-popover-hidden {
  display: none;
}

.c2.uc-fe-popover-animation-fade-enter,
.c2.uc-fe-popover-animation-fade-appear,
.c2.uc-fe-popover-animation-fade-leave {
  -webkit-animation-duration: 0.1s;
  animation-duration: 0.1s;
  -webkit-animation-fill-mode: both;
  animation-fill-mode: both;
}

.c2.uc-fe-popover-animation-fade-enter,
.c2.uc-fe-popover-animation-fade-appear {
  -webkit-animation-name: eMLfYp;
  animation-name: eMLfYp;
}

.c2.uc-fe-popover-animation-fade-leave {
  -webkit-animation-name: hSsjZP;
  animation-name: hSsjZP;
}

.c2.uc-fe-popover-animation-bounce-enter,
.c2.uc-fe-popover-animation-bounce-appear,
.c2.uc-fe-popover-animation-bounce-leave {
  -webkit-animation-duration: 0.1s;
  animation-duration: 0.1s;
  -webkit-animation-fill-mode: both;
  animation-fill-mode: both;
}

.c2.uc-fe-popover-animation-bounce-enter,
.c2.uc-fe-popover-animation-bounce-appear {
  -webkit-animation-name: gLWDmf;
  animation-name: gLWDmf;
}

.c2.uc-fe-popover-animation-bounce-leave {
  -webkit-animation-name: dSExIX;
  animation-name: dSExIX;
}

.c2.uc-fe-popover-animation-zoom-enter,
.c2.uc-fe-popover-animation-zoom-appear,
.c2.uc-fe-popover-animation-zoom-leave {
  -webkit-animation-duration: 0.1s;
  animation-duration: 0.1s;
  -webkit-animation-fill-mode: both;
  animation-fill-mode: both;
}

.c2.uc-fe-popover-animation-zoom-enter,
.c2.uc-fe-popover-animation-zoom-appear {
  -webkit-animation-name: gDGwlq;
  animation-name: gDGwlq;
}

.c2.uc-fe-popover-animation-zoom-leave {
  -webkit-animation-name: xUjnO;
  animation-name: xUjnO;
}

.c2.uc-fe-popover-animation-slide-up-enter,
.c2.uc-fe-popover-animation-slide-up-appear {
  -webkit-animation-duration: 0.1s;
  animation-duration: 0.1s;
  -webkit-animation-fill-mode: both;
  animation-fill-mode: both;
  -webkit-transform-origin: 0 0;
  -ms-transform-origin: 0 0;
  transform-origin: 0 0;
  display: block !important;
  opacity: 0;
  -webkit-animation-timing-function: cubic-bezier(0.08,0.82,0.17,1);
  animation-timing-function: cubic-bezier(0.08,0.82,0.17,1);
  -webkit-animation-play-state: paused;
  animation-play-state: paused;
}

.c2.uc-fe-popover-animation-slide-up-leave {
  -webkit-animation-duration: 0.1s;
  animation-duration: 0.1s;
  -webkit-animation-fill-mode: both;
  animation-fill-mode: both;
  -webkit-transform-origin: 0 0;
  -ms-transform-origin: 0 0;
  transform-origin: 0 0;
  display: block !important;
  opacity: 1;
  -webkit-animation-timing-function: cubic-bezier(0.6,0.04,0.98,0.34);
  animation-timing-function: cubic-bezier(0.6,0.04,0.98,0.34);
  -webkit-animation-play-state: paused;
  animation-play-state: paused;
}

.c2.uc-fe-popover-animation-slide-up-enter-active.uc-fe-popover-placement-bottomLeft,
.c2.uc-fe-popover-animation-slide-up-appear-active.uc-fe-popover-placement-bottomLeft,
.c2.uc-fe-popover-animation-slide-up-enter-active.uc-fe-popover-placement-bottomCenter,
.c2.uc-fe-popover-animation-slide-up-appear-active.uc-fe-popover-placement-bottomCenter,
.c2.uc-fe-popover-animation-slide-up-enter-active.uc-fe-popover-placement-bottomRight,
.c2.uc-fe-popover-animation-slide-up-appear-active.uc-fe-popover-placement-bottomRight {
  -webkit-animation-name: kuepuf;
  animation-name: kuepuf;
  -webkit-animation-play-state: running;
  animation-play-state: running;
}

.c2.uc-fe-popover-animation-slide-up-enter-active.uc-fe-popover-placement-topLeft,
.c2.uc-fe-popover-animation-slide-up-appear-active.uc-fe-popover-placement-topLeft,
.c2.uc-fe-popover-animation-slide-up-enter-active.uc-fe-popover-placement-topCenter,
.c2.uc-fe-popover-animation-slide-up-appear-active.uc-fe-popover-placement-topCenter,
.c2.uc-fe-popover-animation-slide-up-enter-active.uc-fe-popover-placement-topRight,
.c2.uc-fe-popover-animation-slide-up-appear-active.uc-fe-popover-placement-topRight {
  -webkit-animation-name: bAmAeh;
  animation-name: bAmAeh;
  -webkit-animation-play-state: running;
  animation-play-state: running;
}

.c2.uc-fe-popover-animation-slide-up-leave-active.uc-fe-popover-placement-bottomLeft,
.c2.uc-fe-popover-animation-slide-up-leave-active.uc-fe-popover-placement-bottomCenter,
.c2.uc-fe-popover-animation-slide-up-leave-active.uc-fe-popover-placement-bottomRight {
  -webkit-animation-name: kbwIVM;
  animation-name: kbwIVM;
  -webkit-animation-play-state: running;
  animation-play-state: running;
}

.c2.uc-fe-popover-animation-slide-up-leave-active.uc-fe-popover-placement-topLeft,
.c2.uc-fe-popover-animation-slide-up-leave-active.uc-fe-popover-placement-topCenter,
.c2.uc-fe-popover-animation-slide-up-leave-active.uc-fe-popover-placement-topRight {
  -webkit-animation-name: bRXKvn;
  animation-name: bRXKvn;
  -webkit-animation-play-state: running;
  animation-play-state: running;
}

.c8 {
  padding: 8px 10px;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-radius: 3px;
  background-color: #fff;
  border: 1px solid #c3cad9;
  color: #6b798e;
}

.c5 {
  display: inline-block;
  position: absolute;
  width: 0;
  height: 0;
  border-width: 0;
  border-color: transparent;
  border-style: solid;
}

.c7 {
  display: inline-block;
  position: absolute;
  width: 0;
  height: 0;
  border-width: 0;
  border-color: transparent;
  border-style: solid;
}

.c3 .c4 {
  bottom: -6px;
  margin-left: -6px;
  border-top-width: 6px;
  border-right-width: 6px;
  border-left-width: 6px;
  border-top-color: #c3cad9;
}

.c3 .c6 {
  bottom: 1px;
  margin-left: -6px;
  border-top-width: 6px;
  border-right-width: 6px;
  border-left-width: 6px;
  border-top-color: #fff;
}

.c3 .c4 {
  left: 15%;
}

.c9 .c4 {
  bottom: -6px;
  margin-left: -6px;
  border-top-width: 6px;
  border-right-width: 6px;
  border-left-width: 6px;
  border-top-color: #c3cad9;
}

.c9 .c6 {
  bottom: 1px;
  margin-left: -6px;
  border-top-width: 6px;
  border-right-width: 6px;
  border-left-width: 6px;
  border-top-color: #fff;
}

.c9 .c4 {
  left: 50%;
}

.c10 .c4 {
  bottom: -6px;
  margin-left: -6px;
  border-top-width: 6px;
  border-right-width: 6px;
  border-left-width: 6px;
  border-top-color: #c3cad9;
}

.c10 .c6 {
  bottom: 1px;
  margin-left: -6px;
  border-top-width: 6px;
  border-right-width: 6px;
  border-left-width: 6px;
  border-top-color: #fff;
}

.c10 .c4 {
  right: 15%;
}

.c11 .c4 {
  top: -6px;
  margin-left: -6px;
  border-bottom-width: 6px;
  border-left-width: 6px;
  border-right-width: 6px;
  border-bottom-color: #c3cad9;
}

.c11 .c6 {
  top: 1px;
  margin-left: -6px;
  border-bottom-width: 6px;
  border-left-width: 6px;
  border-right-width: 6px;
  border-bottom-color: #fff;
}

.c11 .c4 {
  left: 15%;
}

.c12 .c4 {
  top: -6px;
  margin-left: -6px;
  border-bottom-width: 6px;
  border-left-width: 6px;
  border-right-width: 6px;
  border-bottom-color: #c3cad9;
}

.c12 .c6 {
  top: 1px;
  margin-left: -6px;
  border-bottom-width: 6px;
  border-left-width: 6px;
  border-right-width: 6px;
  border-bottom-color: #fff;
}

.c12 .c4 {
  left: 50%;
}

.c13 .c4 {
  top: -6px;
  margin-left: -6px;
  border-bottom-width: 6px;
  border-left-width: 6px;
  border-right-width: 6px;
  border-bottom-color: #c3cad9;
}

.c13 .c6 {
  top: 1px;
  margin-left: -6px;
  border-bottom-width: 6px;
  border-left-width: 6px;
  border-right-width: 6px;
  border-bottom-color: #fff;
}

.c13 .c4 {
  right: 15%;
}

.c14 .c4 {
  right: -6px;
  margin-top: -6px;
  border-left-width: 6px;
  border-top-width: 6px;
  border-bottom-width: 6px;
  border-left-color: #c3cad9;
}

.c14 .c6 {
  right: 1px;
  margin-top: -6px;
  border-left-width: 6px;
  border-top-width: 6px;
  border-bottom-width: 6px;
  border-left-color: #fff;
}

.c14 .c4 {
  top: 15%;
  margin-top: 0;
}

.c15 .c4 {
  right: -6px;
  margin-top: -6px;
  border-left-width: 6px;
  border-top-width: 6px;
  border-bottom-width: 6px;
  border-left-color: #c3cad9;
}

.c15 .c6 {
  right: 1px;
  margin-top: -6px;
  border-left-width: 6px;
  border-top-width: 6px;
  border-bottom-width: 6px;
  border-left-color: #fff;
}

.c15 .c4 {
  top: 50%;
}

.c16 .c4 {
  right: -6px;
  margin-top: -6px;
  border-left-width: 6px;
  border-top-width: 6px;
  border-bottom-width: 6px;
  border-left-color: #c3cad9;
}

.c16 .c6 {
  right: 1px;
  margin-top: -6px;
  border-left-width: 6px;
  border-top-width: 6px;
  border-bottom-width: 6px;
  border-left-color: #fff;
}

.c16 .c4 {
  bottom: 15%;
}

.c17 .c4 {
  left: -6px;
  margin-top: -6px;
  border-right-width: 6px;
  border-bottom-width: 6px;
  border-top-width: 6px;
  border-right-color: #c3cad9;
}

.c17 .c6 {
  left: 1px;
  margin-top: -6px;
  border-right-width: 6px;
  border-bottom-width: 6px;
  border-top-width: 6px;
  border-right-color: #fff;
}

.c17 .c4 {
  top: 15%;
  margin-top: 0;
}

.c18 .c4 {
  left: -6px;
  margin-top: -6px;
  border-right-width: 6px;
  border-bottom-width: 6px;
  border-top-width: 6px;
  border-right-color: #c3cad9;
}

.c18 .c6 {
  left: 1px;
  margin-top: -6px;
  border-right-width: 6px;
  border-bottom-width: 6px;
  border-top-width: 6px;
  border-right-color: #fff;
}

.c18 .c4 {
  top: 50%;
}

.c19 .c4 {
  left: -6px;
  margin-top: -6px;
  border-right-width: 6px;
  border-bottom-width: 6px;
  border-top-width: 6px;
  border-right-color: #c3cad9;
}

.c19 .c6 {
  left: 1px;
  margin-top: -6px;
  border-right-width: 6px;
  border-bottom-width: 6px;
  border-top-width: 6px;
  border-right-color: #fff;
}

.c19 .c4 {
  bottom: 15%;
}

.c1 {
  vertical-align: baseline;
}

.c0 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #6b798e;
  background: #fff;
  border-color: #c3cad9;
}

.c0:hover {
  color: #4074e1;
  background: #fff;
  border-color: #4683e6;
}

<div>
  <div
    style="margin:40px 80px;display:inline-block;position:relative;"
  >
    <div
      id="TriggerContainer"
    >
      <button
        class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c0"
        type="button"
      >
        <i
          class="uc-fe-button-icon uc-fe-icon icon__ai c1"
          type="ai"
        />
        Button
      </button>
      <div>
        <div
          class="uc-fe-popover c2 uc-fe-popover-placement-topLeft "
        >
          <div
            class="c3"
          >
            <span
              class="c4 c5"
            >
              <span
                class="c6 c7"
              />
            </span>
            <div
              class="c8"
            >
              <p>
                topLeft
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    style="margin:40px 80px;display:inline-block;position:relative;"
  >
    <div
      id="TriggerContainer"
    >
      <button
        class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c0"
        type="button"
      >
        <i
          class="uc-fe-button-icon uc-fe-icon icon__ai c1"
          type="ai"
        />
        Button
      </button>
      <div>
        <div
          class="uc-fe-popover c2 uc-fe-popover-placement-top "
        >
          <div
            class="c9"
          >
            <span
              class="c4 c5"
            >
              <span
                class="c6 c7"
              />
            </span>
            <div
              class="c8"
            >
              <p>
                top
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    style="margin:40px 80px;display:inline-block;position:relative;"
  >
    <div
      id="TriggerContainer"
    >
      <button
        class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c0"
        type="button"
      >
        <i
          class="uc-fe-button-icon uc-fe-icon icon__ai c1"
          type="ai"
        />
        Button
      </button>
      <div>
        <div
          class="uc-fe-popover c2 uc-fe-popover-placement-topRight "
        >
          <div
            class="c10"
          >
            <span
              class="c4 c5"
            >
              <span
                class="c6 c7"
              />
            </span>
            <div
              class="c8"
            >
              <p>
                topRight
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    style="margin:40px 80px;display:inline-block;position:relative;"
  >
    <div
      id="TriggerContainer"
    >
      <button
        class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c0"
        type="button"
      >
        <i
          class="uc-fe-button-icon uc-fe-icon icon__ai c1"
          type="ai"
        />
        Button
      </button>
      <div>
        <div
          class="uc-fe-popover c2 uc-fe-popover-placement-bottomLeft "
        >
          <div
            class="c11"
          >
            <span
              class="c4 c5"
            >
              <span
                class="c6 c7"
              />
            </span>
            <div
              class="c8"
            >
              <p>
                bottomLeft
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    style="margin:40px 80px;display:inline-block;position:relative;"
  >
    <div
      id="TriggerContainer"
    >
      <button
        class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c0"
        type="button"
      >
        <i
          class="uc-fe-button-icon uc-fe-icon icon__ai c1"
          type="ai"
        />
        Button
      </button>
      <div>
        <div
          class="uc-fe-popover c2 uc-fe-popover-placement-bottom "
        >
          <div
            class="c12"
          >
            <span
              class="c4 c5"
            >
              <span
                class="c6 c7"
              />
            </span>
            <div
              class="c8"
            >
              <p>
                bottom
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    style="margin:40px 80px;display:inline-block;position:relative;"
  >
    <div
      id="TriggerContainer"
    >
      <button
        class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c0"
        type="button"
      >
        <i
          class="uc-fe-button-icon uc-fe-icon icon__ai c1"
          type="ai"
        />
        Button
      </button>
      <div>
        <div
          class="uc-fe-popover c2 uc-fe-popover-placement-bottomRight "
        >
          <div
            class="c13"
          >
            <span
              class="c4 c5"
            >
              <span
                class="c6 c7"
              />
            </span>
            <div
              class="c8"
            >
              <p>
                bottomRight
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    style="margin:40px 80px;display:inline-block;position:relative;"
  >
    <div
      id="TriggerContainer"
    >
      <button
        class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c0"
        type="button"
      >
        <i
          class="uc-fe-button-icon uc-fe-icon icon__ai c1"
          type="ai"
        />
        Button
      </button>
      <div>
        <div
          class="uc-fe-popover c2 uc-fe-popover-placement-leftTop "
        >
          <div
            class="c14"
          >
            <span
              class="c4 c5"
            >
              <span
                class="c6 c7"
              />
            </span>
            <div
              class="c8"
            >
              <p>
                leftTop
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    style="margin:40px 80px;display:inline-block;position:relative;"
  >
    <div
      id="TriggerContainer"
    >
      <button
        class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c0"
        type="button"
      >
        <i
          class="uc-fe-button-icon uc-fe-icon icon__ai c1"
          type="ai"
        />
        Button
      </button>
      <div>
        <div
          class="uc-fe-popover c2 uc-fe-popover-placement-left "
        >
          <div
            class="c15"
          >
            <span
              class="c4 c5"
            >
              <span
                class="c6 c7"
              />
            </span>
            <div
              class="c8"
            >
              <p>
                left
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    style="margin:40px 80px;display:inline-block;position:relative;"
  >
    <div
      id="TriggerContainer"
    >
      <button
        class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c0"
        type="button"
      >
        <i
          class="uc-fe-button-icon uc-fe-icon icon__ai c1"
          type="ai"
        />
        Button
      </button>
      <div>
        <div
          class="uc-fe-popover c2 uc-fe-popover-placement-leftBottom "
        >
          <div
            class="c16"
          >
            <span
              class="c4 c5"
            >
              <span
                class="c6 c7"
              />
            </span>
            <div
              class="c8"
            >
              <p>
                leftBottom
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    style="margin:40px 80px;display:inline-block;position:relative;"
  >
    <div
      id="TriggerContainer"
    >
      <button
        class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c0"
        type="button"
      >
        <i
          class="uc-fe-button-icon uc-fe-icon icon__ai c1"
          type="ai"
        />
        Button
      </button>
      <div>
        <div
          class="uc-fe-popover c2 uc-fe-popover-placement-rightTop "
        >
          <div
            class="c17"
          >
            <span
              class="c4 c5"
            >
              <span
                class="c6 c7"
              />
            </span>
            <div
              class="c8"
            >
              <p>
                rightTop
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    style="margin:40px 80px;display:inline-block;position:relative;"
  >
    <div
      id="TriggerContainer"
    >
      <button
        class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c0"
        type="button"
      >
        <i
          class="uc-fe-button-icon uc-fe-icon icon__ai c1"
          type="ai"
        />
        Button
      </button>
      <div>
        <div
          class="uc-fe-popover c2 uc-fe-popover-placement-right "
        >
          <div
            class="c18"
          >
            <span
              class="c4 c5"
            >
              <span
                class="c6 c7"
              />
            </span>
            <div
              class="c8"
            >
              <p>
                right
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    style="margin:40px 80px;display:inline-block;position:relative;"
  >
    <div
      id="TriggerContainer"
    >
      <button
        class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c0"
        type="button"
      >
        <i
          class="uc-fe-button-icon uc-fe-icon icon__ai c1"
          type="ai"
        />
        Button
      </button>
      <div>
        <div
          class="uc-fe-popover c2 uc-fe-popover-placement-rightBottom "
        >
          <div
            class="c19"
          >
            <span
              class="c4 c5"
            >
              <span
                class="c6 c7"
              />
            </span>
            <div
              class="c8"
            >
              <p>
                rightBottom
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tooltip demo -- theme 1`] = `
.c1.uc-fe-popover {
  position: absolute;
  left: -9999px;
  top: -9999px;
  z-index: 100;
  display: block;
}

.c1.uc-fe-popover-hidden {
  display: none;
}

.c1.uc-fe-popover-animation-fade-enter,
.c1.uc-fe-popover-animation-fade-appear,
.c1.uc-fe-popover-animation-fade-leave {
  -webkit-animation-duration: 0.1s;
  animation-duration: 0.1s;
  -webkit-animation-fill-mode: both;
  animation-fill-mode: both;
}

.c1.uc-fe-popover-animation-fade-enter,
.c1.uc-fe-popover-animation-fade-appear {
  -webkit-animation-name: eMLfYp;
  animation-name: eMLfYp;
}

.c1.uc-fe-popover-animation-fade-leave {
  -webkit-animation-name: hSsjZP;
  animation-name: hSsjZP;
}

.c1.uc-fe-popover-animation-bounce-enter,
.c1.uc-fe-popover-animation-bounce-appear,
.c1.uc-fe-popover-animation-bounce-leave {
  -webkit-animation-duration: 0.1s;
  animation-duration: 0.1s;
  -webkit-animation-fill-mode: both;
  animation-fill-mode: both;
}

.c1.uc-fe-popover-animation-bounce-enter,
.c1.uc-fe-popover-animation-bounce-appear {
  -webkit-animation-name: gLWDmf;
  animation-name: gLWDmf;
}

.c1.uc-fe-popover-animation-bounce-leave {
  -webkit-animation-name: dSExIX;
  animation-name: dSExIX;
}

.c1.uc-fe-popover-animation-zoom-enter,
.c1.uc-fe-popover-animation-zoom-appear,
.c1.uc-fe-popover-animation-zoom-leave {
  -webkit-animation-duration: 0.1s;
  animation-duration: 0.1s;
  -webkit-animation-fill-mode: both;
  animation-fill-mode: both;
}

.c1.uc-fe-popover-animation-zoom-enter,
.c1.uc-fe-popover-animation-zoom-appear {
  -webkit-animation-name: gDGwlq;
  animation-name: gDGwlq;
}

.c1.uc-fe-popover-animation-zoom-leave {
  -webkit-animation-name: xUjnO;
  animation-name: xUjnO;
}

.c1.uc-fe-popover-animation-slide-up-enter,
.c1.uc-fe-popover-animation-slide-up-appear {
  -webkit-animation-duration: 0.1s;
  animation-duration: 0.1s;
  -webkit-animation-fill-mode: both;
  animation-fill-mode: both;
  -webkit-transform-origin: 0 0;
  -ms-transform-origin: 0 0;
  transform-origin: 0 0;
  display: block !important;
  opacity: 0;
  -webkit-animation-timing-function: cubic-bezier(0.08,0.82,0.17,1);
  animation-timing-function: cubic-bezier(0.08,0.82,0.17,1);
  -webkit-animation-play-state: paused;
  animation-play-state: paused;
}

.c1.uc-fe-popover-animation-slide-up-leave {
  -webkit-animation-duration: 0.1s;
  animation-duration: 0.1s;
  -webkit-animation-fill-mode: both;
  animation-fill-mode: both;
  -webkit-transform-origin: 0 0;
  -ms-transform-origin: 0 0;
  transform-origin: 0 0;
  display: block !important;
  opacity: 1;
  -webkit-animation-timing-function: cubic-bezier(0.6,0.04,0.98,0.34);
  animation-timing-function: cubic-bezier(0.6,0.04,0.98,0.34);
  -webkit-animation-play-state: paused;
  animation-play-state: paused;
}

.c1.uc-fe-popover-animation-slide-up-enter-active.uc-fe-popover-placement-bottomLeft,
.c1.uc-fe-popover-animation-slide-up-appear-active.uc-fe-popover-placement-bottomLeft,
.c1.uc-fe-popover-animation-slide-up-enter-active.uc-fe-popover-placement-bottomCenter,
.c1.uc-fe-popover-animation-slide-up-appear-active.uc-fe-popover-placement-bottomCenter,
.c1.uc-fe-popover-animation-slide-up-enter-active.uc-fe-popover-placement-bottomRight,
.c1.uc-fe-popover-animation-slide-up-appear-active.uc-fe-popover-placement-bottomRight {
  -webkit-animation-name: kuepuf;
  animation-name: kuepuf;
  -webkit-animation-play-state: running;
  animation-play-state: running;
}

.c1.uc-fe-popover-animation-slide-up-enter-active.uc-fe-popover-placement-topLeft,
.c1.uc-fe-popover-animation-slide-up-appear-active.uc-fe-popover-placement-topLeft,
.c1.uc-fe-popover-animation-slide-up-enter-active.uc-fe-popover-placement-topCenter,
.c1.uc-fe-popover-animation-slide-up-appear-active.uc-fe-popover-placement-topCenter,
.c1.uc-fe-popover-animation-slide-up-enter-active.uc-fe-popover-placement-topRight,
.c1.uc-fe-popover-animation-slide-up-appear-active.uc-fe-popover-placement-topRight {
  -webkit-animation-name: bAmAeh;
  animation-name: bAmAeh;
  -webkit-animation-play-state: running;
  animation-play-state: running;
}

.c1.uc-fe-popover-animation-slide-up-leave-active.uc-fe-popover-placement-bottomLeft,
.c1.uc-fe-popover-animation-slide-up-leave-active.uc-fe-popover-placement-bottomCenter,
.c1.uc-fe-popover-animation-slide-up-leave-active.uc-fe-popover-placement-bottomRight {
  -webkit-animation-name: kbwIVM;
  animation-name: kbwIVM;
  -webkit-animation-play-state: running;
  animation-play-state: running;
}

.c1.uc-fe-popover-animation-slide-up-leave-active.uc-fe-popover-placement-topLeft,
.c1.uc-fe-popover-animation-slide-up-leave-active.uc-fe-popover-placement-topCenter,
.c1.uc-fe-popover-animation-slide-up-leave-active.uc-fe-popover-placement-topRight {
  -webkit-animation-name: bRXKvn;
  animation-name: bRXKvn;
  -webkit-animation-play-state: running;
  animation-play-state: running;
}

.c7 {
  padding: 8px 10px;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-radius: 3px;
  background-color: #fff;
  border: 1px solid #c3cad9;
  color: #6b798e;
}

.c9 {
  padding: 8px 10px;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-radius: 3px;
  background-color: #3a4161;
  border: 1px solid #3a4161;
  color: #fff;
}

.c4 {
  display: inline-block;
  position: absolute;
  width: 0;
  height: 0;
  border-width: 0;
  border-color: transparent;
  border-style: solid;
}

.c6 {
  display: inline-block;
  position: absolute;
  width: 0;
  height: 0;
  border-width: 0;
  border-color: transparent;
  border-style: solid;
}

.c2 .c3 {
  bottom: -6px;
  margin-left: -6px;
  border-top-width: 6px;
  border-right-width: 6px;
  border-left-width: 6px;
  border-top-color: #c3cad9;
}

.c2 .c5 {
  bottom: 1px;
  margin-left: -6px;
  border-top-width: 6px;
  border-right-width: 6px;
  border-left-width: 6px;
  border-top-color: #fff;
}

.c2 .c3 {
  left: 15%;
}

.c10 .c3 {
  bottom: -6px;
  margin-left: -6px;
  border-top-width: 6px;
  border-right-width: 6px;
  border-left-width: 6px;
  border-top-color: #c3cad9;
}

.c10 .c5 {
  bottom: 1px;
  margin-left: -6px;
  border-top-width: 6px;
  border-right-width: 6px;
  border-left-width: 6px;
  border-top-color: #fff;
}

.c10 .c3 {
  left: 50%;
}

.c11 .c3 {
  bottom: -6px;
  margin-left: -6px;
  border-top-width: 6px;
  border-right-width: 6px;
  border-left-width: 6px;
  border-top-color: #c3cad9;
}

.c11 .c5 {
  bottom: 1px;
  margin-left: -6px;
  border-top-width: 6px;
  border-right-width: 6px;
  border-left-width: 6px;
  border-top-color: #fff;
}

.c11 .c3 {
  right: 15%;
}

.c12 .c3 {
  top: -6px;
  margin-left: -6px;
  border-bottom-width: 6px;
  border-left-width: 6px;
  border-right-width: 6px;
  border-bottom-color: #c3cad9;
}

.c12 .c5 {
  top: 1px;
  margin-left: -6px;
  border-bottom-width: 6px;
  border-left-width: 6px;
  border-right-width: 6px;
  border-bottom-color: #fff;
}

.c12 .c3 {
  left: 15%;
}

.c13 .c3 {
  top: -6px;
  margin-left: -6px;
  border-bottom-width: 6px;
  border-left-width: 6px;
  border-right-width: 6px;
  border-bottom-color: #c3cad9;
}

.c13 .c5 {
  top: 1px;
  margin-left: -6px;
  border-bottom-width: 6px;
  border-left-width: 6px;
  border-right-width: 6px;
  border-bottom-color: #fff;
}

.c13 .c3 {
  left: 50%;
}

.c14 .c3 {
  top: -6px;
  margin-left: -6px;
  border-bottom-width: 6px;
  border-left-width: 6px;
  border-right-width: 6px;
  border-bottom-color: #c3cad9;
}

.c14 .c5 {
  top: 1px;
  margin-left: -6px;
  border-bottom-width: 6px;
  border-left-width: 6px;
  border-right-width: 6px;
  border-bottom-color: #fff;
}

.c14 .c3 {
  right: 15%;
}

.c15 .c3 {
  right: -6px;
  margin-top: -6px;
  border-left-width: 6px;
  border-top-width: 6px;
  border-bottom-width: 6px;
  border-left-color: #c3cad9;
}

.c15 .c5 {
  right: 1px;
  margin-top: -6px;
  border-left-width: 6px;
  border-top-width: 6px;
  border-bottom-width: 6px;
  border-left-color: #fff;
}

.c15 .c3 {
  top: 15%;
  margin-top: 0;
}

.c16 .c3 {
  right: -6px;
  margin-top: -6px;
  border-left-width: 6px;
  border-top-width: 6px;
  border-bottom-width: 6px;
  border-left-color: #c3cad9;
}

.c16 .c5 {
  right: 1px;
  margin-top: -6px;
  border-left-width: 6px;
  border-top-width: 6px;
  border-bottom-width: 6px;
  border-left-color: #fff;
}

.c16 .c3 {
  top: 50%;
}

.c17 .c3 {
  right: -6px;
  margin-top: -6px;
  border-left-width: 6px;
  border-top-width: 6px;
  border-bottom-width: 6px;
  border-left-color: #c3cad9;
}

.c17 .c5 {
  right: 1px;
  margin-top: -6px;
  border-left-width: 6px;
  border-top-width: 6px;
  border-bottom-width: 6px;
  border-left-color: #fff;
}

.c17 .c3 {
  bottom: 15%;
}

.c18 .c3 {
  left: -6px;
  margin-top: -6px;
  border-right-width: 6px;
  border-bottom-width: 6px;
  border-top-width: 6px;
  border-right-color: #c3cad9;
}

.c18 .c5 {
  left: 1px;
  margin-top: -6px;
  border-right-width: 6px;
  border-bottom-width: 6px;
  border-top-width: 6px;
  border-right-color: #fff;
}

.c18 .c3 {
  top: 15%;
  margin-top: 0;
}

.c19 .c3 {
  left: -6px;
  margin-top: -6px;
  border-right-width: 6px;
  border-bottom-width: 6px;
  border-top-width: 6px;
  border-right-color: #c3cad9;
}

.c19 .c5 {
  left: 1px;
  margin-top: -6px;
  border-right-width: 6px;
  border-bottom-width: 6px;
  border-top-width: 6px;
  border-right-color: #fff;
}

.c19 .c3 {
  top: 50%;
}

.c20 .c3 {
  left: -6px;
  margin-top: -6px;
  border-right-width: 6px;
  border-bottom-width: 6px;
  border-top-width: 6px;
  border-right-color: #c3cad9;
}

.c20 .c5 {
  left: 1px;
  margin-top: -6px;
  border-right-width: 6px;
  border-bottom-width: 6px;
  border-top-width: 6px;
  border-right-color: #fff;
}

.c20 .c3 {
  bottom: 15%;
}

.c8 .c3 {
  bottom: -6px;
  margin-left: -6px;
  border-top-width: 6px;
  border-right-width: 6px;
  border-left-width: 6px;
  border-top-color: #3a4161;
}

.c8 .c5 {
  bottom: 1px;
  margin-left: -6px;
  border-top-width: 6px;
  border-right-width: 6px;
  border-left-width: 6px;
  border-top-color: #3a4161;
}

.c8 .c3 {
  left: 15%;
}

.c0 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #6b798e;
  background: #fff;
  border-color: #c3cad9;
}

.c0:hover {
  color: #4074e1;
  background: #fff;
  border-color: #4683e6;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      id="TriggerContainer"
    >
      <button
        class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c0"
        type="button"
      >
        Hover
      </button>
      <div>
        <div
          class="uc-fe-popover c1 uc-fe-popover-placement-topLeft "
        >
          <div
            class="c2"
          >
            <span
              class="c3 c4"
            >
              <span
                class="c5 c6"
              />
            </span>
            <div
              class="c7"
            >
              <p>
                tooltip message
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      id="TriggerContainer"
    >
      <button
        class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c0"
        type="button"
      >
        Hover
      </button>
      <div>
        <div
          class="uc-fe-popover c1 uc-fe-popover-placement-topLeft "
        >
          <div
            class="c8"
          >
            <span
              class="c3 c4"
            >
              <span
                class="c5 c6"
              />
            </span>
            <div
              class="c9"
            >
              <p>
                tooltip message
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tooltip demo -- tooltip 1`] = `
.c11 {
  vertical-align: baseline;
}

.c13 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #6b798e;
  background: #fff;
  border-color: #c3cad9;
}

.c13:hover {
  color: #4074e1;
  background: #fff;
  border-color: #4683e6;
}

.c10 {
  margin-right: 8px;
  font-size: 14px;
}

.c8 {
  color: #6b798e;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c8 .c9 {
  color: #4074e1;
}

.c12 {
  color: #6b798e;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c6 {
  position: relative;
  margin-bottom: -8px;
}

.c6 .c7,
.c6 .style__RadioTagWrap-sc-25j3mq-3,
.c6 .style__RadioCardWrap-sc-25j3mq-8 {
  margin-right: 8px;
  margin-bottom: 8px;
}

.c6 .c7:last-child,
.c6 .style__RadioTagWrap-sc-25j3mq-3:last-child,
.c6 .style__RadioCardWrap-sc-25j3mq-8:last-child {
  margin-right: 0;
}

.c6 .c15+.c15 {
  margin-left: -1px;
}

.c6 .c14 {
  margin-right: -1px;
  margin-bottom: 8px;
}

.c6 .c14:first-child {
  border-radius: 2px 0 0 2px;
}

.c6 .c14:last-child {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

.c4 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
}

.c5 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.c1 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.c1:before,
.c1:after {
  content: ' ';
  display: table;
}

.c1:after {
  clear: both;
}

.c1 .c3 {
  padding-left: 8px;
  padding-right: 8px;
}

.c0 {
  margin-bottom: 16px;
}

.c0:last-child {
  margin-bottom: 0;
}

.c2 {
  padding-top: 5px;
  line-height: 1.5;
  word-break: break-all;
}

<div>
  <form
    class="demo-form uc-fe-form "
  >
    <div
      class="uc-fe-form-item c0 uc-fe-row c1"
    >
      <div
        class="uc-fe-form-label c2 c3 uc-fe-col c4"
        span="3"
      >
        placement
      </div>
      <div
        class="uc-fe-form-controller c3 uc-fe-col c5"
        span="9"
      >
        <div
          class="c6"
        >
          <div
            checked=""
            class="c7 uc-fe-radio uc-fe-radio-checked uc-fe-radio-size-md uc-fe-radio-styletype-default c8"
          >
            <i
              class="c9 c10 uc-fe-icon icon__cbox-ed c11"
              type="cbox-ed"
            />
            topLeft
          </div>
          <div
            class="c7 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c12"
          >
            <i
              class="c9 c10 uc-fe-icon icon__circle c11"
              type="circle"
            />
            top
          </div>
          <div
            class="c7 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c12"
          >
            <i
              class="c9 c10 uc-fe-icon icon__circle c11"
              type="circle"
            />
            topRight
          </div>
          <div
            class="c7 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c12"
          >
            <i
              class="c9 c10 uc-fe-icon icon__circle c11"
              type="circle"
            />
            bottomLeft
          </div>
          <div
            class="c7 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c12"
          >
            <i
              class="c9 c10 uc-fe-icon icon__circle c11"
              type="circle"
            />
            bottom
          </div>
          <div
            class="c7 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c12"
          >
            <i
              class="c9 c10 uc-fe-icon icon__circle c11"
              type="circle"
            />
            bottomRight
          </div>
          <div
            class="c7 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c12"
          >
            <i
              class="c9 c10 uc-fe-icon icon__circle c11"
              type="circle"
            />
            leftTop
          </div>
          <div
            class="c7 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c12"
          >
            <i
              class="c9 c10 uc-fe-icon icon__circle c11"
              type="circle"
            />
            left
          </div>
          <div
            class="c7 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c12"
          >
            <i
              class="c9 c10 uc-fe-icon icon__circle c11"
              type="circle"
            />
            leftBottom
          </div>
          <div
            class="c7 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c12"
          >
            <i
              class="c9 c10 uc-fe-icon icon__circle c11"
              type="circle"
            />
            rightTop
          </div>
          <div
            class="c7 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c12"
          >
            <i
              class="c9 c10 uc-fe-icon icon__circle c11"
              type="circle"
            />
            right
          </div>
          <div
            class="c7 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c12"
          >
            <i
              class="c9 c10 uc-fe-icon icon__circle c11"
              type="circle"
            />
            rightBottom
          </div>
        </div>
      </div>
    </div>
    <div
      class="uc-fe-form-item c0 uc-fe-row c1"
    >
      <div
        class="uc-fe-form-label c2 c3 uc-fe-col c4"
        span="3"
      >
        theme
      </div>
      <div
        class="uc-fe-form-controller c3 uc-fe-col c5"
        span="9"
      >
        <div
          class="c6"
        >
          <div
            checked=""
            class="c7 uc-fe-radio uc-fe-radio-checked uc-fe-radio-size-md uc-fe-radio-styletype-default c8"
          >
            <i
              class="c9 c10 uc-fe-icon icon__cbox-ed c11"
              type="cbox-ed"
            />
            light
          </div>
          <div
            class="c7 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c12"
          >
            <i
              class="c9 c10 uc-fe-icon icon__circle c11"
              type="circle"
            />
            dark
          </div>
        </div>
      </div>
    </div>
  </form>
  <div
    class="demo-wrap"
  >
    <button
      class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c13"
      type="button"
    >
      content
    </button>
  </div>
</div>
`;
